--- a/opengl-render/build.gradle
+++ b/opengl-render/build.gradle
@@ -14,8 +14,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
 
     implementation rootProject
+    
+    implementation "java3d:vecmath:1.3.1"
 
     implementation 'org.lwjgl:lwjgl:3.3.0'
     implementation 'org.lwjgl:lwjgl-opengl:3.3.0'
     implementation 'org.lwjgl:lwjgl-glfw:3.3.0'
+    implementation 'org.lwjgl:lwjgl-stb:3.3.0'
 }
